Ajustando comportamento disfuncional do ícone de localização da seção .footer_localization. A margem lateral desse ícone estava reduzinho seu tamanho à medida que a tela aumentava para larguras superiores a 1920px. Dessa forma, substitui margin-right no ícone por gap em seu contêiner pai, o que resolver a problemática.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,7 +285,7 @@ html {
                 }
 
                 & .footer__icon {
-                    width: min(0.8vw, 1.3rem);
+                    width: min(0.8vw, 1.5rem);
 
                 }
             }
